--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "doregarray",
+    "name": "doregarray-dan",
     "version": "1.0.0",
     "bin": {
         "doregarray": "index.js"
