--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
     "name": "doregarray-dan",
-    "version": "1.0.0",
+    "version": "1.1.0",
+    "description": "Get to know Doregarray via CLI",
     "bin": {
         "doregarray-dan": "index.js"
+    },
+    "dependencies": {
+        "cli-welcome": "^2.2.2"
     }
 }
